Adding inisialisasi LIFF

--- a/index.html
+++ b/index.html
@@ -183,5 +183,6 @@
 </body>
 <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 <script src="catatan-config.js"></script>
+<script src="liff-starter.js"></script>
  
 </html>
