Creating login page

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
             </form>
         </div>
  
- 
-        <div id="list-catatan" class="well">
-            Pilih List Catatan untuk melihat catatan yang sudah dibuat.
+        <div id="notLogin">
+            <h3>Ayo makan di Krusty Crab</h3>
+            <p>Sebelum memesan makanan, silakan login terlebih dahulu</p>
+            <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
         </div>
  
         <!--Konten LIFF v2-->
