Editing login page

--- a/index.html
+++ b/index.html
@@ -25,13 +25,9 @@
         <div class="page-header">
             <h1 align="center">
                 Selamat Datang di Krusty Crab
-            </h1>
-            <ul class="nav nav-pills">
-                <li><a id="nav-list-catatan" href="javascript:void(0);" onclick="gantiMenu('list-catatan');">List Makanan</a></li>
-                <li><a id="nav-tambah-catatan" href="javascript:void(0);" onclick="gantiMenu('tambah-catatan');">Tambah Makanan</a></li>
-            </ul>
- 
+            </h1> 
         </div>
+
         <div id="tambah-catatan" class="well" style="display:none;">
             <form id="form-data">
                 <div id="nama-group" class="form-group">
@@ -112,6 +108,11 @@
         <!--Konten LIFF v2-->
  
         <div id="liffAppContent">
+            <ul class="nav nav-pills">
+                <li><a id="nav-list-catatan" href="javascript:void(0);" onclick="gantiMenu('pesan-makanan');">Pesan Makanan</a></li>
+                <li><a id="nav-tambah-catatan" href="javascript:void(0);" onclick="gantiMenu('harga-makanan');">Daftar Harga Makanan</a></li>
+            </ul>
+            
             <!-- ACTION BUTTONS -->
             <div class="buttonGroup">
                 <div class="buttonRow">
