Adding daftar harga

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div id="liffAppContent">
             <ul class="nav nav-pills">
                 <li><a id="nav-list-catatan" href="javascript:void(0);" onclick="gantiMenu('pesan-makanan');">Pesan Makanan</a></li>
-                <li><a id="nav-tambah-catatan" href="javascript:void(0);" onclick="gantiMenu('harga-makanan');">Daftar Harga Makanan</a></li>
+                <li><a id="nav-tambah-catatan" href="javascript:void(0);" onclick="gantiMenu('daftar-harga');">Daftar Harga Makanan</a></li>
             </ul>
             
             <!-- ACTION BUTTONS -->
@@ -151,6 +151,35 @@
                             page</a> for more information.</p>
                 </div>
             </div>
+        </div>
+
+        <div id="daftar-harga">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">No.</th>
+                    <th scope="col">Nama</th>
+                    <th scope="col">Harga</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Krabby Patty</td>
+                    <td>Rp50.000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Fried Chicken</td>
+                    <td>Rp40.000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Fried Potato</td>
+                    <td>Rp30.000</td>
+                  </tr>
+                </tbody>
+              </table>
         </div>
         <!-- LIFF ID ERROR -->
         <div id="liffIdErrorMessage" class="hidden">
