Fixing daftar harga

--- a/index.html
+++ b/index.html
@@ -98,6 +98,35 @@
                     class="btn btn-warning btn-small" />
             </form>
         </div>
+
+        <div id="daftar-harga" class="well" style="display:none;">
+            <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">No.</th>
+                    <th scope="col">Nama</th>
+                    <th scope="col">Harga</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">1</th>
+                    <td>Krabby Patty</td>
+                    <td>Rp50.000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">2</th>
+                    <td>Fried Chicken</td>
+                    <td>Rp40.000</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">3</th>
+                    <td>Fried Potato</td>
+                    <td>Rp30.000</td>
+                  </tr>
+                </tbody>
+              </table>
+        </div>
  
         <div id="notLogin">
             <h3>Ayo makan di Krusty Crab</h3>
@@ -153,34 +182,6 @@
             </div>
         </div>
 
-        <div id="daftar-harga">
-            <table class="table">
-                <thead>
-                  <tr>
-                    <th scope="col">No.</th>
-                    <th scope="col">Nama</th>
-                    <th scope="col">Harga</th>
-                  </tr>
-                </thead>
-                <tbody>
-                  <tr>
-                    <th scope="row">1</th>
-                    <td>Krabby Patty</td>
-                    <td>Rp50.000</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">2</th>
-                    <td>Fried Chicken</td>
-                    <td>Rp40.000</td>
-                  </tr>
-                  <tr>
-                    <th scope="row">3</th>
-                    <td>Fried Potato</td>
-                    <td>Rp30.000</td>
-                  </tr>
-                </tbody>
-              </table>
-        </div>
         <!-- LIFF ID ERROR -->
         <div id="liffIdErrorMessage" class="hidden">
             <p>You have not assigned any value for LIFF ID.</p>
