--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
  
             <!-- LIFF DATA -->
-            <!-- <div id="liffData">
+            <div id="liffData">
                 <h3 id="liffDataHeader" class="textLeft">Informasi:</h3>
                 <table>
                     <tr>
@@ -165,7 +165,7 @@
                         <td id="isLoggedIn" class="textLeft"></td>
                     </tr>
                 </table>
-            </div> -->
+            </div>
             <!-- LOGIN LOGOUT BUTTONS -->
             <div class="buttonGroup">
                 <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
@@ -173,12 +173,12 @@
             </div>
             <div id="statusMessage">
                 <div id="isInClientMessage"></div>
-                <!-- <div id="apiReferenceMessage">
+                <div id="apiReferenceMessage">
                     <p>Available LIFF methods vary depending on the browser you use to open the LIFF app.</p>
                     <p>Please refer to the <a
                             href="https://developers.line.biz/en/reference/liff/#initialize-liff-app">API reference
                             page</a> for more information.</p>
-                </div> -->
+                </div>
             </div>
         </div>
 
