--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             </div>
  
             <!-- LIFF DATA -->
-            <div id="liffData">
+            <!-- <div id="liffData">
                 <h3 id="liffDataHeader" class="textLeft">Informasi:</h3>
                 <table>
                     <tr>
@@ -165,7 +165,7 @@
                         <td id="isLoggedIn" class="textLeft"></td>
                     </tr>
                 </table>
-            </div>
+            </div> -->
             <!-- LOGIN LOGOUT BUTTONS -->
             <div class="buttonGroup">
                 <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
