--- a/index.html
+++ b/index.html
@@ -173,12 +173,12 @@
             </div>
             <div id="statusMessage">
                 <div id="isInClientMessage"></div>
-                <div id="apiReferenceMessage">
+                <!-- <div id="apiReferenceMessage">
                     <p>Available LIFF methods vary depending on the browser you use to open the LIFF app.</p>
                     <p>Please refer to the <a
                             href="https://developers.line.biz/en/reference/liff/#initialize-liff-app">API reference
                             page</a> for more information.</p>
-                </div>
+                </div> -->
             </div>
         </div>
 
