Deleting logout and login button

--- a/index.html
+++ b/index.html
@@ -169,10 +169,10 @@
         </div>
 
         <!-- LOGIN LOGOUT BUTTONS -->
-        <div class="buttonGroup">
+        <!-- <div class="buttonGroup">
             <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
             <button id="liffLogoutButton" class="btn btn-warning btn-small">Log out</button>
-        </div>
+        </div> -->
         <div id="statusMessage">
             <div id="isInClientMessage"></div>
             <!-- <div id="apiReferenceMessage">
