Adding logout button

--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <button id="openWindowButton" class="btn btn-success btn-small">Open External Window</button>
                     <button id="closeWindowButton" class="btn btn-danger btn-small">Close LIFF App</button>
                     <button id="sendMessageButton" class="btn btn-warning btn-small">Send Message</button>
+                    <button id="liffLogoutButton" class="btn btn-warning btn-small">Log out</button>
                 </div>
- 
             </div>
  
             <!-- LIFF DATA -->
