--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Krusty Crab</title>
 </head>
-<body>
-    <div id="notLogin" class="container">
+<body onload="getData();">
+    <div id="notLogin" class="container mt-5 mb-5">
         <h3>Ayo makan di Krusty Crab</h3>
         <p>Sebelum memesan makanan, silakan login terlebih dahulu</p>
         <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
     </div>
-    <div id="pesan-makanan" class="container">
+    <div id="liffAppContent" class="container mt-5 mb-5" onload="getData();">
         <div class="page-header">
             <h1 align="center">
                 Selamat Datang di Krusty Crab
@@ -89,4 +89,5 @@
     </div>
 </body>
     <script src="script.js"></script>
+    <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </html>
