Editing liff script

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
                 <div class="col mt-4">
                     <span class="glyphicon glyphicon-minus" aria-hidden="true" onclick="kurang('jumlah-krabby-patty');"></span>
-                    <span id="jumlah-krabby-patty">0</span>
+                    <span id="jumlah-krabby-patty"></span>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true" onclick="add('jumlah-krabby-patty');"></span>
                 </div>
             </div>
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col mt-4">
                     <span class="glyphicon glyphicon-minus" aria-hidden="true" onclick="kurang('jumlah-fried-chicken');"></span>
-                    <span id="jumlah-fried-chicken">0</span>
+                    <span id="jumlah-fried-chicken"></span>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true" onclick="add('jumlah-fried-chicken');"></span>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                 </div>
                 <div class="col mt-4">
                     <span class="glyphicon glyphicon-minus" aria-hidden="true" onclick="kurang('jumlah-milkshake'); "></span>
-                    <span id="jumlah-milkshake">0</span>
+                    <span id="jumlah-milkshake"></span>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true" onclick="add('jumlah-milkshake'); "></span>
                 </div>
             </div>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col mt-4">
                     <span class="glyphicon glyphicon-minus" aria-hidden="true" onclick="kurang('jumlah-orange-juice'); "></span>
-                    <span id="jumlah-orange-juice">0</span>
+                    <span id="jumlah-orange-juice"></span>
                     <span class="glyphicon glyphicon-plus" aria-hidden="true" onclick="add('jumlah-orange-juice');"></span>
                 </div>
             </div>
@@ -95,6 +95,5 @@
     </div>
 </body>
     <script src="script.js"></script>
-    <script src="liff-starter.js"></script>
     <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
 </html>
