Adding id message button

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                     <h6>Harga: <span id="harga"></span></h6>
                 </div>
                 <div class="col mt-4">
-                    <button class="btn btn-success">Pesan Sekarang</button>
+                    <button class="btn btn-success" id="sendMessageButton">Pesan Sekarang</button>
                 </div>
             </div>
         </form>
