--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <title>Krusty Crab</title>
+    <title>Krusty Krab</title>
 </head>
 <body onload="getData();">
     <div id="notLogin" class="container mt-5 mb-5">
-        <h3>Ayo makan di Krusty Crab</h3>
+        <h3>Ayo makan di Krusty Krab</h3>
         <p>Sebelum memesan makanan, silakan login terlebih dahulu</p>
         <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
     </div>
@@ -21,7 +21,8 @@
         <div class="page-header">
             <h1 align="center">
                 Selamat Datang di Krusty Crab
-            </h1> 
+            </h1>
+            <h6>Hai <span id="username"></span>, ayo makan di Krusty Krab</h6> 
         </div>
         <form id="form-data">
             <h4>Makanan</h4>
