--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Krusty Krab</title>
 </head>
 <body onload="getData();">
-    <div id="notLogin" class="container mt-5 mb-5">
+    <div id="notLogin" class="container mt-3 mb-5">
         <h3>Ayo makan di Krusty Krab</h3>
         <p>Sebelum memesan makanan, silakan login terlebih dahulu</p>
         <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
@@ -22,7 +22,8 @@
             <h1 align="center">
                 Selamat Datang di Krusty Crab
             </h1>
-            <h6>Hai <span id="username"></span>, ayo makan di Krusty Krab</h6> 
+            <h6>Hai <span id="username"></span>, ayo makan di Krusty Krab</h6>
+            <img src="" id="img-user">
         </div>
         <form id="form-data">
             <h4>Makanan</h4>
