--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
         <p>Sebelum memesan makanan, silakan login terlebih dahulu</p>
         <button id="liffLoginButton" class="btn btn-success btn-small">Log in</button>
     </div>
-    <div id="liffAppContent" class="container mt-5 mb-5">
+    <div id="liffAppContent" class="container mt-3 mb-5">
         <div class="page-header">
             <h1 align="center">
                 Selamat Datang di Krusty Crab
             </h1>
             <h6>Hai <span id="username"></span>, ayo makan di Krusty Krab</h6>
-            <img src="" id="img-user">
+            <img src="" id="img-user" alt="Avatar" style="border-radius: 50%;">
         </div>
         <form id="form-data">
             <h4>Makanan</h4>
