--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </div>
             <div id="orange-juice" class="form-row">
                 <div class="col">
-                    <h6><b>Orang Juice</b></h6>
+                    <h6><b>Orange Juice</b></h6>
                     <h6>Rp10.000</h6>
                 </div>
                 <div class="col mt-4">
